--- a/UMS_UI/src/app/features/users/components/user/user.component.html
+++ b/UMS_UI/src/app/features/users/components/user/user.component.html
@@ -1,4 +1,3 @@
-
 <div class="container mt-3">
     <div class="d-flex justify-content-between">
         <h1>Users List</h1>
@@ -13,92 +12,49 @@
         </mat-form-field>
     </div>
 
+    <div class="my-3 d-flex justify-content-between">
+        <mat-form-field>
+            <mat-select placeholder="Sort Columns"
+                [(value)]="selectedSortColumns" multiple
+                (selectionChange)="applySorting()">
+                <mat-option *ngFor="let column of allColumns" [value]="column"
+                    [disabled]="column === 'action'">
+                    {{ column | titlecase }}
+                </mat-option>
+            </mat-select>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-select placeholder="Default Sort Order"
+                [(value)]="defaultSortOrder" (selectionChange)="applySorting()">
+                <mat-option value="asc">Ascending</mat-option>
+                <mat-option value="desc">Descending</mat-option>
+            </mat-select>
+        </mat-form-field>
+
+    </div>
+
     <div class="my-3">
-
-        <div *ngIf="dataSource"
-            class="mat-elevation-z8 table-responsive">
-            <table mat-table [dataSource]="dataSource" matSort
-                [matSortActive]="'userName'" matSortDirection="desc">
-
-                <ng-container matColumnDef="userName">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header
-                        sortActionDescription="Sort by userName"> User Name
+        <div *ngIf="dataSource" class="mat-elevation-z8 table-responsive">
+            <table mat-table [dataSource]="dataSource" matSort>
+                <ng-container *ngFor="let column of displayedColumns"
+                    [matColumnDef]="column">
+                    <th mat-header-cell *matHeaderCellDef
+                        [mat-sort-header]="isSortEnabled(column) ? column : null">
+                        {{ column | titlecase }}
                     </th>
                     <td mat-cell *matCellDef="let user">
-                        {{user.userName}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="firstName">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header
-                        sortActionDescription="Sort by name"> First Name </th>
-                    <td mat-cell *matCellDef="let user">
-                        {{user.firstName}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="lastName">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header
-                        sortActionDescription="Sort by name"> Last Name </th>
-                    <td mat-cell *matCellDef="let user">
-                        {{user.lastName}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="email">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header
-                        sortActionDescription="Sort by Email"> Email </th>
-                    <td mat-cell *matCellDef="let user"> {{user.email}}
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="phone">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header
-                        sortActionDescription="Sort by Phone">
-                        Phone </th>
-                    <td mat-cell *matCellDef="let user">
-                        {{ user.phone}}
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="street">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header
-                        sortActionDescription="Sort by street"> street </th>
-                    <td mat-cell *matCellDef="let user"> {{user.street}}
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="city">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header
-                        sortActionDescription="Sort by city"> city </th>
-                    <td mat-cell *matCellDef="let user"> {{user.city}}
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="state">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header
-                        sortActionDescription="Sort by state"> State
-                    </th>
-                    <td mat-cell *matCellDef="let user">
-                        {{user.state}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="password">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header
-                        sortActionDescription="Sort by password"> password
-                    </th>
-                    <td mat-cell *matCellDef="let user">
-                        {{user.password}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="action">
-                    <th mat-header-cell *matHeaderCellDef> Action </th>
-                    <td mat-cell *matCellDef="let user">
-                        <button mat-icon-button color="primary"
-                            (click)="EditUserForm(user)">
-                            <mat-icon>edit</mat-icon>
-                        </button>
-                        <button mat-icon-button color="warn"
-                            (click)="deleteUser(user.id)">
-                            <mat-icon>delete</mat-icon>
-                        </button>
+                        <span *ngIf="column !== 'action'">{{ user[column]
+                            }}</span>
+                        <span *ngIf="column === 'action'">
+                            <button mat-icon-button color="primary"
+                                (click)="EditUserForm(user)">
+                                <mat-icon>edit</mat-icon>
+                            </button>
+                            <button mat-icon-button color="warn"
+                                (click)="deleteUser(user.id)">
+                                <mat-icon>delete</mat-icon>
+                            </button>
+                        </span>
                     </td>
                 </ng-container>
 
@@ -116,12 +72,10 @@
                         (change)="changePageSize(pageSizeInput.value)">
                 </mat-form-field>
             </div>
-
-        </div>
+        </div>`
     </div>
 
     <div class="d-flex justify-content-end">
         <a mat-raised-button routerLink="/Ums/adduser">Add User</a>
     </div>
-
 </div>
