--- a/UMS_UI/src/app/features/users/components/add-edit-user/add-edit-user.component.html
+++ b/UMS_UI/src/app/features/users/components/add-edit-user/add-edit-user.component.html
@@ -25,7 +25,8 @@
         <button mat-raised-button color="warn"
             mat-dialog-close>Cancel</button>
         <button mat-raised-button color="accent" type="submit"
-            [disabled]="addUserForm.invalid" (click)="onSubmit()" mat-dialog-close>Save</button>
+            [disabled]="addUserForm.invalid" (click)="onSubmit()"
+            mat-dialog-close>Save</button>
     </mat-dialog-actions>
 
 </div>
@@ -37,29 +38,26 @@
             <mat-form-field class="mb-3 col" appearance="fill">
                 <mat-label>First Name</mat-label>
                 <input matInput formControlName="firstName" />
-                <mat-error
-                    *ngIf="addUserForm.get('firstName')?.invalid && addUserForm.get('firstName')?.touched">
-                    <span
-                        *ngIf="addUserForm.get('firstName')?.errors?.['required']">First
-                        Name is required</span>
-                    <span
-                        *ngIf="addUserForm.get('firstName')?.errors?.['maxlength']">First
-                        Name cannot exceed 20 characters</span>
+                @if (commonFunctionService.controlValidity(addUserForm,
+                'firstName')) {
+                <mat-error>
+                    {{ commonFunctionService.getErrorMessage(addUserForm,
+                    'firstName', 'First Name') }}
                 </mat-error>
+                }
             </mat-form-field>
 
             <mat-form-field class="mb-3 col" appearance="fill">
                 <mat-label>Last Name</mat-label>
                 <input matInput formControlName="lastName" />
-                <mat-error
-                    *ngIf="addUserForm.get('lastName')?.invalid && addUserForm.get('lastName')?.touched">
-                    <span
-                        *ngIf="addUserForm.get('lastName')?.errors?.['required']">Last
-                        Name is required</span>
-                    <span
-                        *ngIf="addUserForm.get('lastName')?.errors?.['maxlength']">Last
-                        Name cannot exceed 20 characters</span>
+                @if (commonFunctionService.controlValidity(addUserForm,
+                'lastName')) {
+                <mat-error>
+                    {{ commonFunctionService.getErrorMessage(addUserForm,
+                    'lastName', 'Last Name') }}
                 </mat-error>
+                }
+
             </mat-form-field>
         </div>
 
@@ -67,44 +65,42 @@
             <mat-form-field class="mb-3 col" appearance="fill">
                 <mat-label>Email</mat-label>
                 <input matInput type="email" formControlName="email" />
-                <mat-error
-                    *ngIf="addUserForm.get('email')?.invalid && addUserForm.get('email')?.touched">
-                    <span
-                        *ngIf="addUserForm.get('email')?.errors?.['required']">Email
-                        is required</span>
-                    <span
-                        *ngIf="addUserForm.get('email')?.errors?.['email']">Invalid
-                        email format</span>
+                @if (commonFunctionService.controlValidity(addUserForm,
+                'email')) {
+                <mat-error>
+                    {{ commonFunctionService.getErrorMessage(addUserForm,
+                    'email', 'Email Address') }}
                 </mat-error>
+                }
+
             </mat-form-field>
 
             <mat-form-field class="mb-3 col" appearance="fill">
                 <mat-label>Phone Number</mat-label>
                 <input matInput formControlName="phone" />
-                <mat-error
-                    *ngIf="addUserForm.get('phone')?.invalid && addUserForm.get('phone')?.touched">
-                    <span
-                        *ngIf="addUserForm.get('phone')?.errors?.['phone']">phone
-                        Number is required</span>
-
+                @if (commonFunctionService.controlValidity(addUserForm,
+                'phone')) {
+                <mat-error>
+                    {{ commonFunctionService.getErrorMessage(addUserForm,
+                    'phone', 'Phone Number') }}
                 </mat-error>
+                }
+
             </mat-form-field>
         </div>
         <div class="row">
-
             <mat-form-field class="mb-3 col" appearance="fill">
                 <mat-label>Street</mat-label>
                 <input matInput type="text"
                     formControlName="street" />
-                <mat-error
-                    *ngIf="addUserForm.get('street')?.invalid && addUserForm.get('street')?.touched">
-                    <span
-                        *ngIf="addUserForm.get('street')?.errors?.['required']">street
-                        is required</span>
-                    <span
-                        *ngIf="addUserForm.get('street')?.errors?.['maxlength']">street
-                        cannot exceed 150 characters</span>
+                @if (commonFunctionService.controlValidity(addUserForm,
+                'street')) {
+                <mat-error>
+                    {{ commonFunctionService.getErrorMessage(addUserForm,
+                    'street', 'Street') }}
                 </mat-error>
+                }
+
             </mat-form-field>
 
             <mat-form-field class="mb-3 col" appearance="fill">
@@ -123,37 +119,32 @@
             <mat-form-field class="mb-3 col" appearance="fill">
                 <mat-label>User Name</mat-label>
                 <input matInput type="text" formControlName="userName" />
-                <mat-error
-                    *ngIf="addUserForm.get('userName')?.invalid && addUserForm.get('userName')?.touched">
-                    <span
-                        *ngIf="addUserForm.get('userName')?.errors?.['required']">User
-                        Name
-                        is required</span>
-                    <span
-                        *ngIf="addUserForm.get('userName')?.errors?.['maxlength']">User
-                        Name
-                        cannot exceed 20 characters</span>
+                @if (commonFunctionService.controlValidity(addUserForm,
+                'userName')) {
+                <mat-error>
+                    {{ commonFunctionService.getErrorMessage(addUserForm,
+                    'userName', 'User Name') }}
                 </mat-error>
+                }
             </mat-form-field>
+
         </div>
+        @if (!isDialogMode) {
         <div class="row">
             <mat-form-field class="mb-3 col-6" appearance="fill">
                 <mat-label>Password</mat-label>
                 <input matInput type="text" formControlName="password" />
-                <mat-error
-                    *ngIf="addUserForm.get('password')?.invalid && addUserForm.get('password')?.touched">
-                    <span
-                        *ngIf="addUserForm.get('password')?.errors?.['required']">Password
-                        is required</span>
-                    <span
-                        *ngIf="addUserForm.get('password')?.errors?.['maxlength']">Password
-                        cannot exceed 20 characters</span>
-                    <span
-                        *ngIf="addUserForm.get('password')?.errors?.['minlength']">Password
-                        minimum 6 characters required</span>
+                @if (commonFunctionService.controlValidity(addUserForm,
+                'password')) {
+                <mat-error>
+                    {{ commonFunctionService.getErrorMessage(addUserForm,
+                    'password', 'Password') }}
                 </mat-error>
+                }
             </mat-form-field>
         </div>
+        }
+
         <div class="d-flex justify-content-end" *ngIf="!isDialogMode">
             <button mat-raised-button color="warn" class="me-2">Cancel</button>
             <button mat-raised-button color="primary"
