--- a/UMS_UI/src/app/features/users/components/user/user.component.html
+++ b/UMS_UI/src/app/features/users/components/user/user.component.html
@@ -7,56 +7,56 @@
     </div>
 
     <div class="my-3 d-flex justify-content-end">
-        <mat-form-field>
-            <input matInput (keyup)="applyFilter($event)" placeholder="Search">
-        </mat-form-field>
-    </div>
 
-    <div class="my-3 d-flex justify-content-between">
-        <mat-form-field>
-            <mat-select placeholder="Sort Columns"
-                [(value)]="selectedSortColumns" multiple
-                (selectionChange)="applySorting()">
-                <mat-option *ngFor="let column of allColumns" [value]="column"
-                    [disabled]="column === 'action'">
+        <mat-form-field class="me-3">
+            <mat-select placeholder="Sort Columns" [value]="selectedSortColumns"
+                multiple (selectionChange)="applySorting($event.value)">
+                <mat-option *ngFor="let column of displayedColumns"
+                    [value]="column" [disabled]="column === 'action'">
                     {{ column | titlecase }}
                 </mat-option>
             </mat-select>
         </mat-form-field>
+
         <mat-form-field>
-            <mat-select placeholder="Default Sort Order"
-                [(value)]="defaultSortOrder" (selectionChange)="applySorting()">
-                <mat-option value="asc">Ascending</mat-option>
-                <mat-option value="desc">Descending</mat-option>
-            </mat-select>
+            <input matInput (keyup)="applyFilter($event)" placeholder="Search">
         </mat-form-field>
 
     </div>
 
     <div class="my-3">
         <div *ngIf="dataSource" class="mat-elevation-z8 table-responsive">
-            <table mat-table [dataSource]="dataSource" matSort>
-                <ng-container *ngFor="let column of displayedColumns"
+            <table mat-table [dataSource]="dataSource" matSort
+                matSortDisableClear="true"
+                matSortActive={{selectedSortColumns}}
+                [matSortDirection]="defaultSortOrder">
+                @for (column of displayedColumns; track column) {
+                <ng-container
                     [matColumnDef]="column">
                     <th mat-header-cell *matHeaderCellDef
-                        [mat-sort-header]="isSortEnabled(column) ? column : null">
-                        {{ column | titlecase }}
+                        [mat-sort-header]="isSortEnabled(column) ? column : null"
+                        [disabled]=" isSortEnabled(column) ? false : true ">
+                        {{column | titlecase }}
                     </th>
+
                     <td mat-cell *matCellDef="let user">
-                        <span *ngIf="column !== 'action'">{{ user[column]
-                            }}</span>
-                        <span *ngIf="column === 'action'">
-                            <button mat-icon-button color="primary"
-                                (click)="EditUserForm(user)">
-                                <mat-icon>edit</mat-icon>
-                            </button>
-                            <button mat-icon-button color="warn"
-                                (click)="deleteUser(user.id)">
-                                <mat-icon>delete</mat-icon>
-                            </button>
-                        </span>
+                        @if(column !=='action')
+                        {
+                        <span>{{ user[column]}}</span>
+                        }
+                        @else{
+                        <button mat-icon-button color="primary"
+                            (click)="EditUserForm(user)">
+                            <mat-icon>edit</mat-icon>
+                        </button>
+                        <button mat-icon-button color="warn"
+                            (click)="deleteUser(user.id)">
+                            <mat-icon>delete</mat-icon>
+                        </button>
+                        }
                     </td>
                 </ng-container>
+                }
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row
