--- a/UMS_UI/src/app/features/users/components/user/user.component.html
+++ b/UMS_UI/src/app/features/users/components/user/user.component.html
@@ -30,6 +30,19 @@
                 matSortDisableClear="true"
                 matSortActive={{selectedSortColumns}}
                 [matSortDirection]="defaultSortOrder">
+                <ng-container matColumnDef="select">
+                    <th mat-header-cell *matHeaderCellDef>
+                        <mat-checkbox
+                            (change)="toggleSelectAll($event)"
+                            [checked]="isAllCellsSelected()"></mat-checkbox>
+                    </th>
+                    <td mat-cell *matCellDef="let user">
+                        <mat-checkbox
+                            (change)="toggleSelection($event, user.id)"
+                            [checked]="isHeaderSelected && isCheckboxSelected(user.id)">
+                        </mat-checkbox>
+                    </td>
+                </ng-container>
 
                 <ng-container *ngFor="let column of displayedColumns"
                     [matColumnDef]="column">
@@ -38,7 +51,6 @@
                         [disabled]=" isSortEnabled(column) ? false : true ">
                         {{column | titlecase }}
                     </th>
-
                     <td mat-cell *matCellDef="let user">
                         @if(column !=='action')
                         {
@@ -50,30 +62,26 @@
                             <mat-icon>edit</mat-icon>
                         </button>
                         <button mat-icon-button color="warn"
-                            (click)="deleteUser(user.id)">
+                            (click)="deleteUser([user.id])">
                             <mat-icon>delete</mat-icon>
                         </button>
                         }
                     </td>
                 </ng-container>
-                <ng-container matColumnDef="select">
-                    <th mat-header-cell *matHeaderCellDef>
-                        <mat-checkbox></mat-checkbox>
-                    </th>
-                    <td mat-cell *matCellDef="let user">
-                        <mat-checkbox>
-                        </mat-checkbox>
-                    </td>
-                </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-header-row *matHeaderRowDef="addSelectColumn"></tr>
                 <tr mat-row
-                    *matRowDef="let row; columns: displayedColumns;"></tr>
+                    *matRowDef="let row; columns: addSelectColumn;"></tr>
             </table>
 
             <mat-paginator [pageSizeOptions]="pageSizeOptions"
                 [pageSize]="pageSize"></mat-paginator>
-            <div class="mt-2 me-2 d-flex justify-content-end">
+            <div class="mt-2 me-2 d-flex justify-content-between">
+                <div class="p-2">
+                    <button mat-raised-button color="warn"
+                        (click)="deleteSelectedUsers()">Delete Selected</button>
+                </div>
+
                 <mat-form-field>
                     <input matInput type="number" placeholder="Page Size"
                         #pageSizeInput
