--- a/UMS_UI/src/app/features/users/components/user-delete-modal/user-delete-modal.component.html
+++ b/UMS_UI/src/app/features/users/components/user-delete-modal/user-delete-modal.component.html
@@ -4,7 +4,7 @@
       Are you sure you want to delete the selected users?
     </mat-dialog-content>
     <mat-dialog-actions align="end">
-      <button mat-button (click)="onNoClick()">Cancel</button>
+      <button mat-button (click)="onCancelDelete()">Cancel</button>
       <button mat-button color="warn" [mat-dialog-close]="true">Delete</button>
     </mat-dialog-actions>
   `,
