--- a/UMS_UI/src/app/core/components/layout/navbar/navbar.component.html
+++ b/UMS_UI/src/app/core/components/layout/navbar/navbar.component.html
@@ -1,7 +1,6 @@
 <mat-toolbar color="primary">
     <span>User Management</span>
     <div class="spacer"></div>
-    <a mat-button>Home</a>
-    <a mat-button>About</a>
-    <a mat-button>Contact</a>
+    <a mat-button routerLink="/Ums/user" class="me-3">Home</a>
+    <a mat-button routerLink="/Ums/adduser">Add_User</a>
 </mat-toolbar>
