--- a/UMS_UI/src/app/features/users/components/user/user.component.html
+++ b/UMS_UI/src/app/features/users/components/user/user.component.html
@@ -1,102 +1,10 @@
-<!-- <div class="container mt-3">
-    <div class="d-flex justify-content-between">
-        <h1>Users List</h1>
-    </div>
-
-    <div class="my-3 d-flex justify-content-end">
-
-        <mat-form-field class="me-3">
-            <mat-select placeholder="Sort Columns" [value]="selectedSortColumns"
-                multiple (selectionChange)="applySorting($event.value)">
-                <mat-option *ngFor="let column of displayedColumns"
-                    [value]="column" [disabled]="column === 'action'">
-                    {{ column | titlecase }}
-                </mat-option>
-            </mat-select>
-        </mat-form-field>
-
-        <mat-form-field class="me-3">
-            <input matInput (keyup)="applyFilter($event)" placeholder="Search">
-        </mat-form-field>
-
-        <mat-form-field class="mb-0">
-            <input matInput type="number" placeholder="Page Size"
-                #pageSizeInput
-                (change)="changePageSize(pageSizeInput.value)">
-        </mat-form-field>
-
-    </div>
-    <div class="pb-2 d-flex justify-content-end">
-        <div class="me-3">
-            <a mat-raised-button color="primary" routerLink="/Ums/adduser">Add
-                User</a>
-        </div>
-        <button mat-raised-button color="warn"
-            (click)="deleteSelectedUsers()">Delete Selected</button>
-    </div>
-
-    <div class="my-3">
-        <div *ngIf="dataSource" class="mat-elevation-z8 table-responsive">
-            <table mat-table [dataSource]="dataSource" matSort
-                matSortDisableClear="true"
-                matSortActive={{selectedSortColumns}}
-                [matSortDirection]="defaultSortOrder">
-                <ng-container matColumnDef="select">
-                    <th mat-header-cell *matHeaderCellDef>
-                        <mat-checkbox
-                            (change)="toggleSelectAll($event)"
-                            [checked]="isAllCellsSelected()"></mat-checkbox>
-                    </th>
-                    <td mat-cell *matCellDef="let user">
-                        <mat-checkbox
-                            (change)="toggleSelection($event, user.id)"
-                            [checked]="isHeaderSelected && isCheckboxSelected(user.id)">
-                        </mat-checkbox>
-                    </td>
-                </ng-container>
-
-                <ng-container *ngFor="let column of displayedColumns"
-                    [matColumnDef]="column">
-                    <th mat-header-cell *matHeaderCellDef
-                        [mat-sort-header]="isSortEnabled(column) ? column : null"
-                        [disabled]=" isSortEnabled(column) ? false : true ">
-                        {{column | titlecase }}
-                    </th>
-                    <td mat-cell *matCellDef="let user">
-                        @if(column !=='action')
-                        {
-                        <span>{{ user[column]}}</span>
-                        }
-                        @else{
-                        <button mat-icon-button color="primary"
-                            (click)="EditUserForm(user)">
-                            <mat-icon>edit</mat-icon>
-                        </button>
-                        <button mat-icon-button color="warn"
-                            (click)="deleteUser([user.id])">
-                            <mat-icon>delete</mat-icon>
-                        </button>
-                        }
-                    </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="addSelectColumn"></tr>
-                <tr mat-row
-                    *matRowDef="let row; columns: addSelectColumn;"></tr>
-            </table>
-
-            <mat-paginator [pageSizeOptions]="pageSizeOptions"
-                [pageSize]="pageSize"></mat-paginator>
-
-        </div>`
-    </div>
-</div> -->
-
 <div class="container mt-3">
     <div class="d-flex justify-content-between">
-        <h1>Users List</h1>
+        <h1 *ngIf="userRole==='Admin'">Users List</h1>
+        <h1 *ngIf="userRole!=='Admin'">User</h1>
+
     </div>
-    <div class="my-3">
+    <div>
         <app-table-grid [config]="datagridConfig"></app-table-grid>
     </div>
 </div>
