--- a/UMS_UI/src/app/features/layout/public-layout/component/login-page/login-page.component.html
+++ b/UMS_UI/src/app/features/layout/public-layout/component/login-page/login-page.component.html
@@ -4,7 +4,7 @@
         <mat-card-content>
             <h1 class="mat-title-large mb-3">Login</h1>
             <form [formGroup]="loginForm" class="d-flex flex-column">
-                <mat-form-field class="form-field mb-2">
+                <mat-form-field class="form-field mb-2" appearance="outline">
                     <mat-label>Username</mat-label>
                     <input matInput formControlName="userName" />
                     @if (commonFunctionService.controlValidity(loginForm,
@@ -15,7 +15,7 @@
                     </mat-error>
                     }
                 </mat-form-field>
-                <mat-form-field class="form-field mb-2">
+                <mat-form-field class="form-field mb-2" appearance="outline">
                     <mat-label>Enter your password</mat-label>
                     <input matInput [type]="hide ? 'password' : 'text'"
                         formControlName="password">
