--- a/UMS_UI/src/app/features/grid/table-grid/table-grid.component.html
+++ b/UMS_UI/src/app/features/grid/table-grid/table-grid.component.html
@@ -4,14 +4,15 @@
         <input matInput (keyup)="applyFilter($event,filterDataColumn)"
             placeholder="Search">
     </mat-form-field>
-
-    <a mat-raised-button color="primary" class="ms-3" routerLink="/Ums/adduser"
-        *ngIf="isAdmin">Add
-        User</a>
+    <ng-container *ngFor="let button of this.config.addFetures">
+        <button mat-raised-button [color]="button.color"
+            *ngIf="button.isVisible" (click)="button.callBack(null)"
+            class="ms-3">{{button.btnText}}</button>
+    </ng-container>
 
     <button mat-raised-button color="warn" class="ms-3"
-        *ngIf="selectedUserIds.length>0"
-        (click)="this.config.allDeleteFeature.callBack(this.selectedUserIds)">Delete
+        *ngIf="!this.selection.isEmpty()"
+        (click)="deleteSelectedData()">Delete
         Selected</button>
 
 </div>
@@ -24,14 +25,17 @@
 
         <ng-container matColumnDef="select">
             <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox
-                    (change)="toggleSelectAll($event)"
-                    [checked]="isAllCellsSelected()"></mat-checkbox>
+                <mat-checkbox (change)="$event ? toggleAllRows() : null"
+                    [checked]="selection.hasValue() && isAllSelected()"
+                    [indeterminate]="selection.hasValue() && !isAllSelected()">
+                </mat-checkbox>
             </th>
-            <td mat-cell *matCellDef="let user">
-                <mat-checkbox *ngIf="user.id !== userId"
-                    (change)="toggleSelection($event, user.id)"
-                    [checked]="isHeaderSelected && isCheckboxSelected(user.id)">
+            <td mat-cell *matCellDef="let data">
+                <mat-checkbox
+                    [disabled]="isCheckBoxOrButttonDisabledById(data)"
+                    (click)="$event.stopPropagation()"
+                    (change)="$event ? selection.toggle(data) : null"
+                    [checked]="selection.isSelected(data)">
                 </mat-checkbox>
             </td>
         </ng-container>
@@ -43,21 +47,21 @@
                 [disabled]=" isSortEnabled(column) ? false : true ">
                 {{column | titlecase }}
             </th>
-            <td mat-cell *matCellDef="let user">
-                <span>{{ user[column]}}</span>
+            <td mat-cell *matCellDef="let data">
+                <span>{{ data[column]}}</span>
             </td>
         </ng-container>
         <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef class="text-center">
                 Action
             </th>
-            <td mat-cell *matCellDef="let user">
+            <td mat-cell *matCellDef="let data">
                 <ng-container *ngFor="let button of this.config.actionButtons">
                     <button
-                        *ngIf="user.id !== this.userId || button.icon !== 'delete'"
+                        [disabled]="isCheckBoxOrButttonDisabledById(data) && isButttonDisabledByIcon(button)"
                         mat-icon-button
                         [color]="button.color"
-                        (click)="button.callBack(user)">
+                        (click)="button.callBack(data)">
                         <mat-icon>{{ button.icon }}</mat-icon>
                     </button>
                 </ng-container>
@@ -68,14 +72,14 @@
         <tr mat-row *matRowDef="let row; columns: addAnotherColumn;"></tr>
     </table>
     <ng-container
-        *ngIf="isNoUsersFound()">
+        *ngIf="isNoDataFound()">
         <div class="d-flex justify-content-center mt-3">
-            <h2>No Users Found...</h2>
+            <h2>No Data Found...</h2>
         </div>
     </ng-container>
     <mat-paginator
         *ngIf="isAdmin"
-        [hidden]="isNoUsersFound()"
+        [hidden]="isNoDataFound()"
         [pageSizeOptions]="pageSizeOptions ? pageSizeOptions : []"
         [pageSize]="pageSize" [showFirstLastButtons]="showFirstLastButtons"
         [hidePageSize]="hidePageSizeOption" [disabled]="disabledPagination"
