--- a/UMS_UI/src/app/features/users/components/add-edit-user/add-edit-user.component.html
+++ b/UMS_UI/src/app/features/users/components/add-edit-user/add-edit-user.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-3" *ngIf="!isDialogMode">
-    <div class="d-flex justify-content-between mb-5">
+    <div class="d-flex justify-content-between mb-4">
         <h1>Add User</h1>
-        <a mat-raised-button routerLink="/Ums/user">
+        <a mat-button routerLink="/Ums/user">
             <mat-icon>arrow_back</mat-icon> Back
         </a>
     </div>
