--- a/UMS_UI/src/app/features/layout/secure-layout/component/navbar/navbar.component.html
+++ b/UMS_UI/src/app/features/layout/secure-layout/component/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <mat-toolbar color="primary">
-    <span>User Management</span>
+    <img
+        src="../../../../../../assets/images/android-chrome-512x512-removebg-preview.png"
+        alt="User Management" style="width: 50px;cursor:pointer"
+        routerLink="/Ums/home">
     <div class="spacer"></div>
 
     <ng-container *ngFor="let link of getNavigationLinks()">
