--- a/UMS_UI/src/app/features/grid/table-grid/table-grid.component.html
+++ b/UMS_UI/src/app/features/grid/table-grid/table-grid.component.html
@@ -1,20 +1,22 @@
-<div class="mb-3 d-flex justify-content-end align-items-center">
-    <mat-form-field class="p-0" *ngIf="showFilterOption" appearance="outline"
-        style="margin-bottom: -1.25em">
-        <input matInput (keyup)="applyFilter($event,filterDataColumn)"
+<div class="mb-4 d-flex justify-content-between align-items-center">
+    <mat-form-field *ngIf="showFilterOption" appearance="outline"
+        style="margin-bottom: -1.25em;">
+        <mat-icon matPrefix>search</mat-icon>
+        <input matInput (keyup)="applyFilter($event, filterDataColumn)"
             placeholder="Search">
     </mat-form-field>
-    <ng-container *ngFor="let button of this.config.addButton">
-        <button mat-raised-button [color]="button.color"
-            *ngIf="button.isVisible" (click)="button.callBack(null)"
-            class="ms-3">{{button.btnText}}</button>
-    </ng-container>
+    <div class="d-flex justify-content-end">
+        <ng-container *ngFor="let button of this.config.addButton">
+            <button mat-raised-button [color]="button.color"
+                *ngIf="button.isVisible" (click)="button.callBack(null)"
+                class="ms-3">{{button.btnText}}</button>
+        </ng-container>
 
-    <button mat-raised-button color="warn" class="ms-3"
-        *ngIf="!this.selection.isEmpty()"
-        (click)="deleteSelectedData()">Delete
-        Selected</button>
-
+        <button mat-raised-button color="warn" class="ms-3"
+            *ngIf="!this.selection.isEmpty()"
+            (click)="deleteSelectedData()">Delete
+            Selected</button>
+    </div>
 </div>
 
 <div class="mat-elevation-z8 table-responsive">
@@ -58,7 +60,7 @@
             <td mat-cell *matCellDef="let data">
                 <ng-container *ngFor="let button of this.config.actionButtons">
                     <button
-                        [disabled]="isDisabledById(data) && isButttonDisabledByIcon(button)"
+                        [disabled]="isDisabledById(data) && isButtonDisabledByIcon(button)"
                         mat-icon-button
                         [color]="button.color"
                         (click)="button.callBack(data)">
