--- a/UMS_UI/src/app/features/layout/secure-layout/component/navbar/navbar.component.html
+++ b/UMS_UI/src/app/features/layout/secure-layout/component/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
     <img
-        src="../../../../../../assets/images/android-chrome-512x512-removebg-preview.png"
+        src="../../../../../../assets/images/logo.png"
         alt="User Management" style="width: 50px;cursor:pointer"
         routerLink="/Ums/home">
     <div class="spacer"></div>
