--- a/UMS_UI/src/app/features/grid/table-grid/table-grid.component.html
+++ b/UMS_UI/src/app/features/grid/table-grid/table-grid.component.html
@@ -60,7 +60,7 @@
             <td mat-cell *matCellDef="let data">
                 <ng-container *ngFor="let button of this.config.actionButtons">
                     <button
-                        [disabled]="isDisabledById(data) && isButtonDisabledByIcon(button)"
+                        [disabled]="button.visibilityCallBack(data)"
                         mat-icon-button
                         [color]="button.color"
                         (click)="button.callBack(data)">
